src/test/deca/context/valid/autre/if-instanceof1.deca
//Test valide instance of

class A{}
class B{}

{
    A a = new A();
    if(a instanceof B){
        println("erreur");
    }
    else{
        println("ok");
    }
}