src/test/deca/context/invalid/class/cast-classes.deca
// Programme testant le cast  avec erreur

class A {}

class B {}

{
    A a = new A();
    B b = (B) (a);
}